2001-03-21  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-vars.el (mhc-vertical-calendar-length): Allow cons of
	integer.

	* emacs/mhc-calendar.el (mhc-calendar-insert-rectangle-at): Option
	month allow cons of integer.

2001-03-21  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-calendar.el, emacs/mhc-vars.el, emacs/mhc.el:
	mhc-vertical-calendar-length: New variable.

2001-03-13  Yoshinari Nomura  <nom@quickhack.net>

	* ruby-ext/lib/mhc-signal.rb (signal_disconnect):
	  use `delete' to remove items from a hash.

	* mhc-make.rb (install): 
	  dig destination directories before installation.

2001-03-10  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-calendar.el (toplevel): Condition to define
	`easy-menu-add' is changed to avoid redundancy of definition.

2001-03-05  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (mhc-scan-month):
	Set `mhc-summary-buffer-current-date-month' before inserting summary
	contents.

	* emacs/mhc-wl.el (toplevel): Require 'static.
	(mhc-wl-summary-filename): Added definition for luna-fied API.
	(mhc-wl-insert-summary-contents): Modified for `mhc-use-wide-scope'.
	(mhc-wl/date-to-folder): Ditto.
	(mhc-wl-summary-mode-setup): Set `wl-summary-buffer-folder-indicator';
	Follow the luna-fied API.

2001-02-16  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-summary-mode-setup): Follow suit for
	Mew-1.95b104 or later. Disable highlight summary metod.
	(mhc-mew-highlight-message): Ditto. Check lost functions.

2001-02-09  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-cmail.el (mhc-cmail-setup): Set mhc-mailer-package value
	early mhc-setup() execution.

	* emacs/mhc-gnus.el (mhc-gnus-setup): Ditto.

	* emacs/mhc-mew.el (mhc-mew-setup): Ditto.

	* emacs/mhc-wl.el (mhc-wl-setup): Ditto.

	* emacs/mhc-header.el (mhc-header-valid-p): New function.

	* emacs/mhc-cvs.el (mhc-cvs/update-dirs-exist): Remove function.
	(mhc-cvs/update-dirs): Don't check 'CVS' directory.